# 0DTE-lab

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/qqq0dte/: README.md  demo_no_theta.yaml  opening_momentum_base.yaml  opening_momentum_massive.yaml  opening_momentum_theta.yaml  theta_smoke.yaml
sample_data/massive/contracts/: README.md
sample_data/massive/options_1m/: 2024-03-08_options.csv
sample_data/massive/underlying_1m/: 2024-03-08_underlying.csv
src/odte_lab/: __main__.py  cli.py  config.py  domain.py  engine.py  portfolio.py  pricing.py  reports.py
src/odte_lab/providers/: __init__.py  base.py  massive.py  theta.py
src/odte_lab/strategies/: __init__.py  opening_momentum.py
tests/: test_config.py  test_engine.py  test_portfolio.py
